--- a/src/app/assignment/question-group-list/question-group-detail/integrated-writing-question-detail/integrated-writing-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/integrated-writing-question-detail/integrated-writing-question-detail.component.html
@@ -51,11 +51,13 @@
 
                         <span fxFlex></span>
                     </div>
-                    <textarea class="form-control"
-                              [froalaEditor]="EditorStudentOptions"
-                              [(froalaModel)]="content"
-                              [(ngModel)]="content" (ngModelChange)="changeAnswer()"
-                              rows="10" required ></textarea>
+                    <app-text-editor
+                            [(ngModel)]="content"
+                            [editorOptions]="EditorStudentOptions"
+                            [required]="true"
+                            (ngModelChange)="changeAnswer()"
+                            name="passage"
+                    ></app-text-editor>
                 </div>
             </div>
         </div>
@@ -100,11 +102,13 @@
                         <span fxFlex></span>
                         <app-score-marker [score]="integratedWritingQuestion.score" (marking)="markScore($event)"></app-score-marker>
                     </div>
-                    <textarea class="form-control"
-                              [froalaEditor]="EditorTeacherOptions"
-                              [(froalaModel)]="content"
-                              [(ngModel)]="content" (ngModelChange)="changeAnswer()"
-                              rows="10" required ></textarea>
+                    <app-text-editor
+                            [(ngModel)]="content"
+                            [editorOptions]="EditorTeacherOptions"
+                            [required]="true"
+                            (ngModelChange)="changeAnswer()"
+                            name="passage"
+                    ></app-text-editor>
                 </div>
             </div>
         </div>
