--- a/src/app/edit-assignment/dialogs/add-tpo-listening-question-dialog/add-tpo-listening-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/add-tpo-listening-question-dialog/add-tpo-listening-question-dialog.component.html
@@ -89,12 +89,12 @@
                    ngModel placeholder="答案">
         </mat-input-container>
 
-        <textarea class="form-control"
-                  [froalaEditor]="explanationEditorOptions"
-                  [(froalaModel)]="explanation"
-                  [(ngModel)]="explanation"
-                  name="explanation"
-                  rows="3" required></textarea>
+        <app-text-editor
+                [(ngModel)]="explanation"
+                [editorOptions]="explanationEditorOptions"
+                [required]="true"
+                name="explanation"
+        ></app-text-editor>
     </form>
 </mat-dialog-content>
 
