--- a/src/app/edit-assignment/dialogs/add-integrated-question-dialog/add-integrated-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/add-integrated-question-dialog/add-integrated-question-dialog.component.html
@@ -4,9 +4,12 @@
     <form ngNativeValidate id="form" role="form" #f="ngForm"
           (ngSubmit) = "closeDialogAndSave()" fxLayout="column">
         <mat-input-container>
-            <textarea matInput class="form-control" [froalaEditor]="studentOptions"
-                      placeholder="请输入阅读文章"
-                      [(froalaModel)]="passage" required ></textarea>
+            <app-text-editor
+                    [(ngModel)]="passage"
+                    [editorOptions]="studentOptions"
+                    [required]="true"
+                    name="passage"
+            ></app-text-editor>
 
         </mat-input-container>
 
@@ -23,9 +26,12 @@
         </mat-form-field>
 
         <mat-input-container fxFlex="0 0 40%">
-        <textarea matInput class="form-control" [froalaEditor]="studentOptions"
-                  placeholder="范文"
-                  [(froalaModel)]="answer" required ></textarea>
+            <app-text-editor
+                    [(ngModel)]="answer"
+                    [editorOptions]="studentOptions"
+                    [required]="true"
+                    name="answer"
+            ></app-text-editor>
 
         </mat-input-container>
     </form>
