--- a/src/app/edit-assignment/dialogs/edit-tpo-listening-content-dialog/edit-tpo-listening-content-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-listening-content-dialog/edit-tpo-listening-content-dialog.component.html
@@ -7,12 +7,12 @@
             <mat-hint align="start">输入格式是tpo数/第几部分/第几题:如1/2/1指的就是tpo1的第二部分的第一套听力</mat-hint>
         </mat-input-container>
 
-        <textarea class="form-control"
-                  [froalaEditor]="passageEditorOptions"
-                  [(froalaModel)]="passage"
-                  [(ngModel)]="passage"
-                  name="passage"
-                  rows="5" required></textarea>
+        <app-text-editor
+                [(ngModel)]="passage"
+                [editorOptions]="passageEditorOptions"
+                [required]="true"
+                name="passage"
+        ></app-text-editor>
     </form>
 </mat-dialog-content>
 
