--- a/src/app/edit-assignment/dialogs/edit-tpo-reading-passage-dialog/edit-tpo-reading-passage-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-reading-passage-dialog/edit-tpo-reading-passage-dialog.component.html
@@ -2,9 +2,12 @@
 
 <form ngNativeValidate id="editTpoReadingPassageDialog" role="form" #f="ngForm"
       (ngSubmit) = "dialogRef.close(passage)">
-    <textarea class="form-control" [froalaEditor]="EditorOptions"
-              id="passage" [(froalaModel)]="passage"
-              rows="10" required ></textarea>
+    <app-text-editor
+            [(ngModel)]="passage"
+            [editorOptions]="EditorOptions"
+            [required]="true"
+            name="passage"
+    ></app-text-editor>
 
     <mat-dialog-actions align="end">
         <button mat-button type="button" (click)="dialogRef.close()">取消</button>
