--- a/src/app/edit-assignment/dialogs/edit-tpo-speaking-question-dialog/edit-tpo-speaking-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-speaking-question-dialog/edit-tpo-speaking-question-dialog.component.html
@@ -19,10 +19,12 @@
         </mat-form-field>
 
         <mat-input-container *ngIf="questionIndex == 3 || questionIndex == 4">
-            <textarea matInput class="form-control"
-                      [froalaEditor]="passageEditorOptions"
-                      [(froalaModel)]="question.passage"
-                      name="passage" required></textarea>
+            <app-text-editor
+                    [(ngModel)]="question.passage"
+                    [editorOptions]="passageEditorOptions"
+                    [required]="true"
+                    name="passage"
+            ></app-text-editor>
         </mat-input-container>
 
 
