添加了听力题的排序题

--- a/src/app/assignment/question-group-list/question-group-detail/integrated-writing-question-detail/integrated-writing-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/integrated-writing-question-detail/integrated-writing-question-detail.component.html
@@ -109,6 +109,9 @@
                             (ngModelChange)="changeAnswer()"
                             name="passage"
                     ></app-text-editor>
+                    <textarea
+                        spellcheck="true"
+                    ></textarea>
                 </div>
             </div>
         </div>
