--- a/src/app/edit-assignment/edit-question-list/tpo-reading-item/tpo-reading-item.component.html
+++ b/src/app/edit-assignment/edit-question-list/tpo-reading-item/tpo-reading-item.component.html
@@ -32,8 +32,10 @@
         </div>
     </div>
 
-    <div class="add-question" fxLayout="column" fxLayoutAlign="center center">
-        <a class="add-question-button" (click)="addQuestion()">
+    <div class="add-question"
+         fxLayout="column" fxLayoutAlign="center center"
+         (click)="addQuestion()">
+        <a class="add-question-button" >
             <i class="material-icons">add</i>
             <span>添加题目</span>
         </a>
