--- a/src/app/edit-assignment/edit-assignment.component.html
+++ b/src/app/edit-assignment/edit-assignment.component.html
@@ -1,16 +1,20 @@
 <div id="container" fxLayout="column" fxFlex>
     <mat-toolbar color="primary">
+        <button mat-icon-button class="brand" (click)="snav.toggle()" color="white">
+            <mat-icon>menu</mat-icon>
+        </button>
         <span>琢玉课堂</span>
-
         <span fxFlex></span>
     </mat-toolbar>
 
     <mat-sidenav-container fxFlex>
 
-        <mat-sidenav mode="side" opened>
+        <mat-sidenav mode="side" #snav opened>
             <mat-nav-list>
                 <mat-list-item *ngFor="let assignment of assignmentList"
-                   (click)="selectAssignment(assignment.id)">
+                   (click)="selectAssignment(assignment.id)"
+                    [class.selected]="assignment.id == selectAssignmentId"
+                >
                     <span>{{assignment.assignmentName}}</span>
                 </mat-list-item>
 
