添加阅读题的多选题
1. fix bug 听力的查看页面，pre的时候也可以skipcontent。
2. 修改了simple-audio-player的样式

--- a/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.html
@@ -100,7 +100,10 @@
                     </div>
 
                     <div class="review-question" fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="start center">
-                        <p><strong>{{tpoListeningQuestion.question}}</strong></p>
+                        <p>
+                            <strong>{{tpoListeningQuestion.question}}</strong>
+                            <app-simple-audio-player [src]="tpoListeningQuestion.recordUrl"></app-simple-audio-player>
+                        </p>
                     </div>
                     <mat-list>
                         <mat-list-item *ngFor="let option of tpoListeningQuestion.options; let i = index">
