--- a/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
@@ -16,6 +16,7 @@
                 <mat-option [value]="assignmentService.getTPOReadingSingleChoice()">单选题</mat-option>
                 <mat-option [value]="assignmentService.getTPOReadingInsertChoice()">插入题</mat-option>
                 <mat-option [value]="assignmentService.getTPOReadingTopic()">主旨题</mat-option>
+                <mat-option [value]="assignmentService.getTPOReadingMultipleChoice()">多选题</mat-option>
             </mat-select>
         </mat-form-field>
 
