--- a/src/app/edit-assignment/edit-assignment.component.html
+++ b/src/app/edit-assignment/edit-assignment.component.html
@@ -3,7 +3,9 @@
         <button mat-icon-button class="brand" (click)="snav.toggle()" color="white">
             <mat-icon>menu</mat-icon>
         </button>
-        <span>琢玉课堂</span>
+        <button mat-button class="brand" (click)="goHome()">
+            <span>琢玉课堂</span>
+        </button>
         <span fxFlex></span>
     </mat-toolbar>
 
