--- a/src/app/shared/view/audio/simple-audio-player/simple-audio-player.component.css
+++ b/src/app/shared/view/audio/simple-audio-player/simple-audio-player.component.css
@@ -1,3 +1,6 @@
-button{
-    display: inline;
+i{
+    line-height: 24px;
+    vertical-align: middle;
+    cursor: pointer;
+    font-size: 19px;
 }
