--- a/src/app/shared/view/audio/simple-audio-player/simple-audio-player.component.html
+++ b/src/app/shared/view/audio/simple-audio-player/simple-audio-player.component.html
@@ -1,3 +1,1 @@
-<button mat-icon-button (click)="play()">
-    <mat-icon>volume_up</mat-icon>
-</button>
+<i class="material-icons" (click)="play()">volume_up</i>
