--- a/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.css
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.css
@@ -31,6 +31,8 @@ app-question-pager{
 .review-question p{
     margin-top: 8px;
     margin-bottom: 8px;
+    line-height: 24px;
+    vertical-align: bottom;
 }
 
 p{
